--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
             <td> 1 </td>
             <td> începator &#128507</td>
             <td> cursuri pentru nivelul A1 </td>
-            <td> 150 roni/lună </td>
+            <td> 150 lei/lună </td>
         </tr>
         <tr>
             <td> 2 </td>
             <td> intermediar &#128513 </td>
             <td> cursuri pentru nivelul A2-B1 </td>
-            <td> 200 roni/lună </td>
+            <td> 200 lei/lună </td>
         </tr>
         <tr>
             <td> 3 </td>
             <td> avansat &#128516 </td>
             <td> cursuri pentru nivelul B2 </td>
-            <td> 250 roni/lună </td>
+            <td> 250 lei/lună </td>
         </tr>
         <tr>
             <td> 4 </td>
             <td> nativ &#128511</td>
             <td> cursuri pentru nivelul C1-C2 </td>
-            <td> 300 roni/lună </td>
+            <td> 300 lei/lună </td>
         </tr>
         
     </table> 
